--- a/php_deployment.yaml
+++ b/php_deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     tier: backend
 spec:
-  replicas: 5
+  replicas: 2
   selector:
     matchLabels:
       app: php
@@ -22,7 +22,7 @@ spec:
           path: /code
       containers:
       - name: php
-        image: uusa35/laravel-k8:3
+        image: uusa35/laravel-k8:latest
         volumeMounts:
         - name: dir
           mountPath: /code
