--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
         "laravel/sanctum": "^2.8",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.1",
+        "league/flysystem-aws-s3-v3": "^3.0",
+        "league/flysystem-path-prefixing": "^3.0",
+        "league/flysystem-read-only": "^3.0",
         "maatwebsite/excel": "^3.1",
         "mews/captcha": "^3.2",
         "pusher/pusher-php-server": "^7.2",
