cleaning up things

--- a/.gitignore
+++ b/.gitignore
@@ -19,4 +19,8 @@ yarn-error.log
 /helm/secrets.yml
 /helm/secrets.yml
 /kubernetes
+/docker-compose.yml
+/docker-entrypoint.sh
+/.dockerignore
+/Dockerfile
 
